--- a/front-end-application/package.json
+++ b/front-end-application/package.json
@@ -16,6 +16,7 @@
     "mdbreact": "^4.25.3",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
+    "react-icons": "^3.10.0",
     "react-redux": "^7.2.0",
     "react-scripts": "3.4.0",
     "redux": "^4.0.5"
